refactor: agregar comentarios y resolver algunas advertencias del editor